<resources>
    <string name="app_name">My App</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- App Headings-->
    <string name="heading_my_nanodegree_apps">My Nanodegree Apps !</string>

    <!-- Button Names-->
    <string name="button_name_spotify_streamer">SPOTIFY STREAMER</string>
    <string name="button_name_scores_app">SCORES APP</string>
    <string name="button_name_library_app">LIBRARY APP</string>
    <string name="button_name_build_it_bigger">BUILD IT BIGGER</string>
    <string name="button_name_xyz_reader">XYZ READER</string>
    <string name="button_name_capstone">CAPSTONE: MY OWN APP</string>

    <!-- Toast Messages -->
    <string name="toast_message_on_clicked">This button will launch %s !</string>

</resources>
